--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
   "functions": {
     "src/pages/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs18.x",
+      "maxDuration": 10
     }
-  }
+  },
+  "regions": ["iad1"]
 }
