--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "src/pages/api/**/*.ts": {
-      "runtime": "nodejs18.x",
+      "runtime": "nodejs@18.17.0",
       "maxDuration": 10
     }
   },
