--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,11 +8,11 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-# Copy the rest of the app
+# Copy all source code
 COPY . .
 
-# Expose dev port
+# Expose the dev port
 EXPOSE 3000
 
-# Start app in dev mode (or use next build if needed)
-CMD ["npx", "next", "dev", "-p", "3000"]
+# Start the app in development mode
+CMD ["npm", "run", "dev"]
